--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-// === package.json ===
 {
   "name": "x-activity-companion",
   "version": "1.0.0",
@@ -8,9 +7,23 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "type-check": "tsc --noEmit",
     "format": "prettier --write .",
-    "prepare": "husky install"
+    "format:check": "prettier --check .",
+    "prepare": "husky",
+    "pre-commit": "lint-staged",
+    "postinstall": "husky || true",
+    "validate": "npm run lint && npm run type-check && npm run format:check"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -45,7 +58,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "lucide-react": "^0.358.0",
-    "next": "14.1.0",
+    "next": "^14.2.16",
     "next-auth": "^4.24.6",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
@@ -61,13 +74,14 @@
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
-    "husky": "^9.0.11",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.2",
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
